[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panda-breath-mqtt"
version = "0.1.0"
description = "MQTT bridge for Biqu Panda Breath — Home Assistant integration via MQTT Discovery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "aiomqtt>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
panda-breath-mqtt = "panda_breath_mqtt.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/panda_breath_mqtt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
